--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Page Title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Roughly 155 characters">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="script.js"></script>
+<link href="/tailwind.css" rel="stylesheet">
 </head>
 <body>
-<h1>Hello</h1>
+<h1 class="flex flex-col">Hello</h1>
+<div class="text-blue-500">Hello</div>
 </body>
 </html>
