--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,20 @@
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Roughly 155 characters">
-<link rel="stylesheet" type="text/css" href="mystyle.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="script.js"></script>
-<link href="/tailwind.css" rel="stylesheet">
+<link href="/styles.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="flex flex-col">Hello</h1>
-<div class="text-blue-500">Hello</div>
+<h1 class="flex flex-col w-full justify-center items-center">Hello</h1>
+<div class="font-sm text-white">Hello</div>
+<nav class="flex items-center justify-center">
+    <h1 class="flex gap-3">
+        asdasd
+    </h1>
+    <h2>
+        asdasdasd
+    </h2>
+</nav>
 </body>
 </html>
