--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="flex gap-3">
         asdasd
     </h1>
-    <h2>
+    <h2 class="flex flex-initial text-9xl">
         asdasdasd
     </h2>
 </nav>
