--- a/about.html
+++ b/about.html
@@ -9,13 +9,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link href="/styles.css" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Martel&display=swap" rel="stylesheet"></head>
 
-<body class="h-screen w-screen">
+<body class="h-screen w-screen"
+style="font-family: 'Dancing Script', cursive;">
     <nav class="flex flex-row w-full justify-between h-[110px] items-center sticky"
     style="background-color: rgb(230, 202, 202);">
         <div>
-            <h1 class="ml-9 text-[30px] text-white">
+            <h1 class="ml-9 text-[50px] text-white">
                 MeMail
             </h1>
         </div>
@@ -56,12 +59,13 @@
 
         <div class="col-span-1 flex items-center justify-end">
             <div>
-                <div class="bg-gray-100 h-[400px] w-[400px] relative flex items-center justify-center">
+                <div class="bg-gray-100 h-[400px] w-[400px] relative flex items-center justify-center
+                hover:scale-125 duration-700">
                     <img class="absolute" src="/images/48225.jpg" alt="Mail" height="95%" width="95%">
                 </div>
             </div>
         </div>
-        <div class="col-span-1 flex flex-col items-center gap-6 mx-[80px] mt-[130px]">
+        <div class="col-span-1 flex flex-col items-center gap-6 mx-[70px] mt-[130px]">
             <div class="text-[40px]">
                 <h2>Bonjour, je mappelle Mait
                 </h2>
@@ -69,7 +73,8 @@
                 </h2>
             </div>
             <div>
-                <p class="text-[20px]">This is my world website, nice to meet you all. I'm 23 years old. <br>
+                <p class="text-[18px]"
+                style="font-family: 'Martel', serif;">This is my world website, nice to meet you all. I'm 23 years old. <br>
                     I live in Bangkok, Thailand. I like traveling and cafes hopping.</p>
             </div>
         </div>
