--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,16 @@
     <link href="/styles.css" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Martel&display=swap" rel="stylesheet"></head>
 
-<body class="h-screen w-screen">
+<body class="h-screen w-screen"
+style="font-family: 'Dancing Script', cursive;">
     <nav class="flex flex-row w-full justify-between h-[110px] items-center "
         style="background-color: rgb(230, 202, 202);">
         <div>
-            <h1 class="ml-9 text-[30px] text-white">
+            <h1 class="ml-9 text-[50px] text-white">
                 MeMail
             </h1>
         </div>
