--- a/gallery.html
+++ b/gallery.html
@@ -9,13 +9,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link href="/styles.css" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Martel&display=swap" rel="stylesheet"></head>
 
-<body class="h-screen w-screen">
+<body class="h-screen w-screen"
+style="font-family: 'Dancing Script', cursive;">
     <nav class="flex flex-row w-full justify-between h-[110px] items-center"
     style="background-color: rgb(230, 202, 202);">
         <div>
-            <h1 class="ml-9 text-[30px] text-white">
+            <h1 class="ml-9 text-[50px] text-white">
                 MeMail
             </h1>
         </div>
@@ -53,31 +56,31 @@
     <content class="flex flex-col w-screen h-[630px]">
         <h1 class="flex items-center justify-center text-[40px] mt-5 -pb-3">Gallery</h1>
         <div class="flex flex-row w-auto h-auto my-[30px]">
-            <div class="flex items-center justify-center">
-                <img src="/images/1.jpg" height="50%" width="50%" alt="1">
+            <div class="flex items-center justify-center ">
+                <img src="/images/1.jpg" height="50%" width="50%" alt="1" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/2.jpg" height="50%" width="50%" alt="2">
+            <div class="flex items-center justify-center ">
+                <img src="/images/2.jpg" height="50%" width="50%" alt="2" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/3.jpg" height="50%" width="50%" alt="3">
+            <div class="flex items-center justify-center ">
+                <img src="/images/3.jpg" height="50%" width="50%" alt="3" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/4.jpg" height="50%" width="50%" alt="4">
+            <div class="flex items-center justify-center ">
+                <img src="/images/4.jpg" height="50%" width="50%" alt="4" class="hover:scale-125 duration-500">
             </div>
         </div>
         <div class="flex flex-row w-auto h-auto">
-            <div class="flex items-center justify-center">
-                <img src="/images/5.jpg" height="50%" width="50%" alt="5">
+            <div class="flex items-center justify-center ">
+                <img src="/images/5.jpg" height="50%" width="50%" alt="5" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/6.jpg" height="50%" width="50%" alt="6">
+            <div class="flex items-center justify-center ">
+                <img src="/images/6.jpg" height="50%" width="50%" alt="6" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/7.jpg" height="50%" width="50%" alt="7">
+            <div class="flex items-center justify-center ">
+                <img src="/images/7.jpg" height="50%" width="50%" alt="7" class="hover:scale-125 duration-500">
             </div>
-            <div class="flex items-center justify-center">
-                <img src="/images/8.jpg" height="50%" width="50%" alt="8">
+            <div class="flex items-center justify-center ">
+                <img src="/images/8.jpg" height="50%" width="50%" alt="8" class="hover:scale-125 duration-500">
             </div>
         </div>
 
