--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="script.js"></script>
 <link href="/styles.css" rel="stylesheet">
-</head>
-<body class="h-screen w-screen">
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Martel&display=swap" rel="stylesheet"></head>
+<body class="h-screen w-screen"
+style="font-family: 'Dancing Script', cursive;">
 <nav class="flex flex-row w-full justify-between h-[110px] items-center "
 style="background-color: rgb(230, 202, 202);">
     <div>
-        <h1 class="ml-9 text-[30px] text-white">
+        <h1 class="ml-9 text-[50px] text-white">
             MeMail
         </h1>
     </div>
@@ -54,9 +57,9 @@ style="background-image: url('/images/bg_home.png');
        background-size: 100%;">
     <div class="flex overflow-visible">
         <img src="/images/48222.jpg" alt="Mail"
-         height="630px">
+         height="630px" class="hover:translate-x-36 duration-1000">
     </div>
-    <div class="col-span-2 flex flex-col justify-center items-center gap-6 mx-[200px]">
+    <div class="col-span-2 flex flex-col justify-center items-center gap-6 mx-[180px]">
         <div class="text-[50px] pr-[310px]">
             <h2 >Hello . . .
             </h2>
@@ -64,7 +67,8 @@ style="background-image: url('/images/bg_home.png');
             </h2>
         </div>
         <div>
-            <p class="text-[30px]">Bienvenue sur mon site web. Dans ce site, <br>
+            <p class="text-[28px]"
+            style="font-family: 'Martel', serif;">Bienvenue sur mon site web. Dans ce site, <br>
                 vous apprendrez à connaître mon vrai moi. <br>
                 Je suis heureux de partager mon identité <br>
                 avec tout le monde.</p>
