--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Martel&display=swap" rel="stylesheet"></head>
 
-<body class="h-screen w-screen"
+<body class="h-screen w-screen min-w-[1450px]"
 style="font-family: 'Dancing Script', cursive;">
     <nav class="flex flex-row w-full justify-between h-[110px] items-center sticky"
     style="background-color: rgb(230, 202, 202);">
@@ -22,7 +22,7 @@ style="font-family: 'Dancing Script', cursive;">
                 MeMail
             </h1>
         </div>
-        <div class="flex flex-row gap-20 mr-12 text-[30px] text-white">
+        <div class="flex flex-row gap-20 mr-12 text-[40px] text-white">
             <div>
                 <a href="/index.html">
                     <h3">
