--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 </head>
 
-<body class="h-screen w-screen min-w-[1430px] min-h-[]" style="font-family: 'Dancing Script', cursive;">
+<body class="h-screen w-screen min-w-[1400px]" style="font-family: 'Dancing Script', cursive;">
     <nav class="flex flex-row w-full justify-between h-[110px] items-center "
         style="background-color: rgb(230, 202, 202);">
         <div>
