--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ style="font-family: 'Dancing Script', cursive;">
     style="background-color: rgb(230, 202, 202);">
         <div>
             <h1 class="ml-9 text-[50px] text-white">
-                MeMail
+                MeMaii
             </h1>
         </div>
         <div class="flex flex-row gap-20 mr-12 text-[40px] text-white">
