--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ style="background-image: url('/images/bg_home.png');
         <div class="text-[50px] pr-[310px]">
             <h2 >Hello . . .
             </h2>
-            <h2 class="pl-20">I'm mail
+            <h2 class="pl-20">I'm maii
             </h2>
         </div>
         <div>
