--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         style="background-color: rgb(230, 202, 202);">
         <div>
             <h1 class="ml-9 text-[50px] text-white">
-                MeMail
+                MeMaii
             </h1>
         </div>
         <div class="flex flex-row gap-20 mr-12 text-[40px] text-white">
