--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mail_Blog</title>
+<title>Maii_Blog</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Roughly 155 characters">
+<meta name="description" content="My blog about me 🥰">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="script.js"></script>
 <link href="/styles.css" rel="stylesheet">
@@ -18,7 +18,7 @@ style="font-family: 'Dancing Script', cursive;">
 style="background-color: rgb(230, 202, 202);">
     <div>
         <h1 class="ml-9 text-[50px] text-white">
-            MeMail
+            MeMaii
         </h1>
     </div>
     <div class="flex flex-row gap-20 mr-12 text-[40px] text-white">
