--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mail_Blog</title>
+    <title>Maii_Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Roughly 155 characters">
+    <meta name="description" content="My blog about me 🥰">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link href="/styles.css" rel="stylesheet">
