--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ style="font-family: 'Dancing Script', cursive;">
         </div>
         <div class="col-span-1 flex flex-col items-center gap-6 mx-[70px] mt-[130px]">
             <div class="text-[40px]">
-                <h2>Bonjour, je mappelle Mait
+                <h2>Bonjour, je mappelle Maii
                 </h2>
                 <h2 class="pl-20">Thaninee Navawongs
                 </h2>
